<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/action_mall"
        android:icon="@drawable/ic_local_mall_black_24dp"
        android:title="@string/mall" />

    <item
        android:id="@+id/action_video"
        android:icon="@drawable/ic_slideshow_black_24dp"
        android:title="@string/video" />

    <item
        android:id="@+id/action_person"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/mine" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings" />
</menu>